Se Agrego facebook Signin con passaport (aun con errores)

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
+
+    <a href="/auth/facebook">Sign Facebook</a>
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
