--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
 
-    <a href="/auth/facebook">Sign Facebook</a>
+    <a href="/auth/facebook" onclick="onSignInFacebook()">Sign Facebook</a>
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
@@ -35,7 +35,7 @@
             console.log(id_token)
 
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', '/google');
+            xhr.open('POST', '/auth/google');
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.onload = function() {
             console.log('Signed in as: ' + xhr.responseText);
@@ -43,6 +43,18 @@
             xhr.send('idtoken=' + id_token);
             }
 
+    </script>
+    <script>
+        function onSignInFacebook() {
+
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET', '/auth/facebook');
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            xhr.onload = function() {
+            console.log('Signed in as: ' + xhr.responseText);
+            };
+            xhr.send();
+            }
     </script>
 </body>
 </html>
